--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   left: 20%;
   width:80%;
   height:100vh;
-  background-color: blue;
+  /* background-color: blue; */
   transition: all 0.5s;
 }
 
@@ -31,6 +31,11 @@
   left: 100%;
   width:80%;
   height:100vh;
-  background-color: blue;
+  /* background-color: blue; */
   transition: all 0.5s;
+}
+
+#iframethingy {
+  width: 80vw;;
+  height:100vh;;
 }
