--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
-.App {
+.navAfter {
+  position: absolute;
   text-align: center;
-  float:left;
+  transform: translatex(0);
   width: 20%;
+  transition: all 0.5s;
+  left:0;
+}
+
+.navBefore {
+  position: absolute;
+  text-align: center;
+  width: 20%;
+  top:50%;
+  left:50%;
+  transform: translatex(-50%);
+  transition: all 0.5s;
 }
 
 .App-header {
@@ -19,9 +32,8 @@
   position: absolute;
   top: 0;
   left: 20%;
-  width:80%;
+  width:95%;
   height:100vh;
-  /* background-color: blue; */
   transition: all 0.5s;
 }
 
@@ -29,13 +41,13 @@
   position: absolute;
   top: 0;
   left: 100%;
-  width:80%;
-  height:100vh;
-  /* background-color: blue; */
+  width:0%;
+  height:0%;
   transition: all 0.5s;
 }
 
 #iframethingy {
-  width: 80vw;;
-  height:100vh;;
+  margin:2rem 0;
+  width: 80%;
+  height:stretch;
 }
