--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,82 @@
-.navAfter {
-  position: absolute;
-  text-align: center;
-  transform: translatex(0);
-  width: 20%;
-  transition: all 0.5s;
-  left:0;
-}
-
-.navBefore {
-  position: absolute;
-  text-align: center;
-  width: 20%;
-  top:50%;
-  left:50%;
-  transform: translatex(-50%);
-  transition: all 0.5s;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .contentAfter{
   position: absolute;
   top: 0;
   left: 20%;
-  width:95%;
-  height:100vh;
-  transition: all 0.5s;
+  width:60vw;
+  height:80vh;
+  transition: all 1s;
+  background-color: blue;
+  display:flex;
+  margin:0;
+  padding:4%;
+  padding-left: 0;
+  transform: translatey(-50%);
+  top:50%
+}
+
+ .contentBefore > * {
+  display: none;
 }
 
 .contentBefore{
   position: absolute;
   top: 0;
   left: 100%;
-  width:0%;
+  width:60vw;
   height:0%;
-  transition: all 0.5s;
-}
+  transition: all 1s;
+  display:flex;
+  margin:0;
+  padding:0;
 
+}
 #iframethingy {
   margin:2rem 0;
-  width: 80%;
+  width: 60vw;
   height:stretch;
+  transition: all 1s;
+
+}
+
+.projectDisplay {
+  width:60vw;
+  height:80vh;
+}
+
+.projectList {
+  margin: auto 3rem;
+}
+
+.projectList button {
+  margin: 2rem 0;
+  min-width: 10rem;
+  
+}
+
+.navAfter {
+  position: absolute;
+  top:0;
+  text-align: center;
+  width: 20%;
+  left:0%;
+  transition: all 1s;
+  height:100vh;
+}
+
+.navBefore {
+  position: absolute;
+  top:0;
+  text-align: center;
+  width: 20%;
+  transform: translatex(-50%);
+  left:50%;
+  transition: all 1s;
+  height:100vh;
+}
+
+ul {
+  margin:1rem;
+  padding:1rem;
+  list-style-type: none;
 }
