--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,44 @@
   position: absolute;
   top: 0;
   left: 20%;
-  width:60vw;
+  width:75vw;
   height:80vh;
   transition: all 1s;
   background-color: blue;
   display:flex;
   margin:0;
-  padding:4%;
+  padding:3%;
   padding-left: 0;
   transform: translatey(-50%);
   top:50%
 }
 
+.contentAfter > * {
+  transition: all 1s;
+
+}
+
  .contentBefore > * {
   display: none;
+  transition: all 1s;
+
 }
 
 .contentBefore{
   position: absolute;
   top: 0;
   left: 100%;
-  width:60vw;
-  height:0%;
+  width:0;
+  height:0;
   transition: all 1s;
   display:flex;
   margin:0;
   padding:0;
-
+  transform: translatey(-50%);
 }
+
 #iframethingy {
-  margin:2rem 0;
+  margin:1rem 0;
   width: 60vw;
   height:stretch;
   transition: all 1s;
@@ -40,7 +48,7 @@
 }
 
 .projectDisplay {
-  width:60vw;
+  width:60%;
   height:80vh;
 }
 
@@ -69,8 +77,8 @@
   top:0;
   text-align: center;
   width: 20%;
-  transform: translatex(-50%);
-  left:50%;
+  /* transform: translatex(-50%); */
+  left:40%;
   transition: all 1s;
   height:100vh;
 }
