--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,14 @@
   width:75vw;
   height:80vh;
   transition: all 1s;
-  background-color: blue;
+  
   display:flex;
   margin:0;
   padding:3%;
   padding-left: 0;
   transform: translatey(-50%);
-  top:50%
-}
-
-.contentAfter > * {
-  transition: all 1s;
-
-}
-
- .contentBefore > * {
-  display: none;
-  transition: all 1s;
-
+  top:50%;
+  
 }
 
 .contentBefore{
@@ -37,29 +27,6 @@
   margin:0;
   padding:0;
   transform: translatey(-50%);
-}
-
-#iframethingy {
-  margin:1rem 0;
-  width: 60vw;
-  height:stretch;
-  transition: all 1s;
-
-}
-
-.projectDisplay {
-  width:60%;
-  height:80vh;
-}
-
-.projectList {
-  margin: auto 3rem;
-}
-
-.projectList button {
-  margin: 2rem 0;
-  min-width: 10rem;
-  
 }
 
 .navAfter {
