--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   
   display:flex;
   margin:0;
-  padding:3%;
+  padding:3% 0;
   padding-left: 0;
   transform: translatey(-50%);
   top:50%;
@@ -33,19 +33,8 @@
   position: absolute;
   top:0;
   text-align: center;
-  width: 20%;
+  width: 20vw;
   left:0%;
-  transition: all 1s;
-  height:100vh;
-}
-
-.navBefore {
-  position: absolute;
-  top:0;
-  text-align: center;
-  width: 20%;
-  /* transform: translatex(-50%); */
-  left:40%;
   transition: all 1s;
   height:100vh;
 }
